ZGC: C2: fixup_uses_in_catch may fail when expanding many uses

XMLWordPrintable

    • b12
    • Not verified

      I have a patch that will fix a problem in fixup_uses_in_catch that a use might be missed of the out array is realloced during an earlier iteration.

      The new version fix point iterates.

            Assignee:
            Nils Eliasson (Inactive)
            Reporter:
            Nils Eliasson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: