8229970: ZGC: C2: fixup_uses_in_catch may fail when expanding many uses

Reviewed-by: kvn, thartmann